--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div class="message-content">
         <div class="decor"><img src="./birb.png"></div>
           <div class="contents">
-        <h2>for probably the content</h2>
+        <h4>inspired from one of my fav music videos.</h4>
+          (every face of yours is appreciated by those blessed by your friendship)
         <div id="giftContent"></div>
           </div>
       </div>
@@ -39,7 +40,8 @@
       <div class="gift-content">
         <div class="decor"><img src="./flor.png"></div>
         <div class="contents">
-        <h2>Enjoy this while I'll learn to step up next year</h2>
+        <h2>Happpy Birthday, Sakshi!!!</h2>
+            <p> I am writing this to express my admiration towards you. I have appreciated your presence, your patience with me, and your willingness to listen and to yap to me. Although I may sometimes be too much or not realise or don't understand somethings, something that I really regret and want to overcome, for myself, for you and for everyone else. But you inspire me to try to be better. I appreciate how considerate you are, you may not see it, likely a sign of humility, but you are cause I see it. It's inspiring how dedicated and open-minded to ideas you can be and that inspires me. I write this to another year of your company that's greatly appreciated, by the one who considers you their bestie. </p>
         </div>
           <button class="gift-btn" id="gift-btn"> Surprizze </button>
       </div>
@@ -80,7 +82,6 @@
               giftContent.innerHTML = `
               <div class="video-player">
                   <iframe class="video-actual" src="https://drive.google.com/file/d/10o4TZArCxQsZFGmLyi99-RI4jkccAQ9z/preview" width="640" height="480" allow="autoplay"></iframe>
-                </video> 
               </div>
               `;
               messagePage.style.display = 'flex';
